# mkdocs-windows-98

./: .gitignore  404.html  CHANGELOG.md  MANIFEST.in  README.md  index.html  mkdocs.yml  pyproject.toml  sitemap.xml  taskfile.yml
.config/linters/: djlint.json
.github/workflows/: lint.yml
.gitpod/: Dockerfile
.taskfiles/: lint.yml  mkdocs.yml
docs/: getting-started.md  index.md
getting-started/: index.html
search/: search_index.json
src/mkdocs_windows_98/: 404.html  head.html  main.html  mkdocs_theme.yml  scripts.html  taskbar.html  window-page-content.html
src/mkdocs_windows_98/css/: mkdocs-windows-98.css
tests/fixtures/test_doc/: mkdocs_default.yml
tests/fixtures/test_doc/docs/: index.md  test-page-1.md  test-page-2.md  test-page-3.md
tests/fixtures/test_doc/docs/sub-folder-1/: index.md  test-page-sub-folder-1.md
